파스너쉽 가입, 매장등록 API 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 spring:
     jpa:
-        generate-ddl: false
+        generate-ddl: true
         show-sql: true
         database: mysql
         hibernate:
-            ddl-auto: update   # DB ???? ??? ?? ??? ???? ?? ??? ?? [ ???? ?? ?? CREATE ]
+            ddl-auto: create-drop   # DB ???? ??? ?? ??? ???? ?? ??? ?? [ ???? ?? ?? CREATE ]
 
         properties:
             hibernate:
@@ -18,5 +18,4 @@ spring:
     mvc:
         pathmatch:
             matching-strategy: ant_path_matcher
-
 
