매장정보 수정, 매장정보 삭제 API 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
         show-sql: true
         database: mysql
         hibernate:
-            ddl-auto: create-drop   # DB ???? ??? ?? ??? ???? ?? ??? ?? [ ???? ?? ?? CREATE ]
+            ddl-auto: create   # DB ???? ??? ?? ??? ???? ?? ??? ?? [ ???? ?? ?? CREATE ]
 
         properties:
             hibernate:
