customer - 멤버쉽 가입, 멤버쉽 탈퇴 API 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
         show-sql: true
         database: mysql
         hibernate:
-            ddl-auto: create   # DB ???? ??? ?? ??? ???? ?? ??? ?? [ ???? ?? ?? CREATE ]
+            ddl-auto: update   # DB ???? ??? ?? ??? ???? ?? ??? ?? [ ???? ?? ?? CREATE ]
 
         properties:
             hibernate:
